example/99-hello-kubernetes/local/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  namespace: hello-kubernetes
spec:
  rules:
  - host: hello-kubernetes.local
    http:
      paths:
      - backend:
          service:
            name: hello-kubernetes-hello-kubernetes
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
